# NTWI-2025-GrC-DaneNiejednorodne

./: .gitignore  FCM.py  KNN_test.ipynb  Loading.py  README.md  Test.py  create_venv.txt  data_loading.py  fcm_knn_v2.py  knn_core.cp313-win_amd64.pyd  knn_imputer.py  mainnb.ipynb  requirements.txt
CppCode/: CMakeLists.txt  build_howto.txt  knn_core.cpp
_archiwum/: FCM.py  Loading.py  Rename.py  Test.py  fcm_knn_imputer.py  knn_only.py  knn_v2.py  main_fcm_knn.py  main_knn.py  visualization.py
dane/duze/1/: duze-0.attr  duze-3.attr  duze-5.attr  duze-7.attr  duze-9.attr
dane/duze/2/: duze-1.attr  duze-2.attr  duze-4.attr  duze-6.attr  duze-8.attr
notebooks/: KNN_full.ipynb
notebooks/sm_libs/: data_loading.py
